--- a/teaching.html
+++ b/teaching.html
@@ -1,1 +1,18 @@
-
+<!-- Inside the <nav> -->
+<ul>
+  <li>
+    <a href="/biomat.html">
+      Biomatematika
+    </a>
+  </li>
+  <li>
+    <a href="/biostat.html">
+      Biostatisztika
+    </a>
+  </li>
+  <li>
+    <a href="/lanscapeecol.html">
+      Tájökológia
+    </a>
+  </li>
+</ul>
